# chairmanmao

./: Cargo.toml
data/: db.stream
scripts/: download_exams.py  process.py  upload.py
src/: api.rs  command_parser.rs  discord.rs  draw.rs  events.rs  exams.rs  lib.rs  main.rs  messages.rs  store.rs
