[package]
name = "chairmanmao"
version = "0.1.0"
edition = "2021"

[lib]
name = "chairmanmao"
path = "src/lib.rs"

[[bin]]
name = "exam"
path = "src/bin/exam.rs"

[dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "sync"] }
redis = "0.21.5"
serde_json = "1.0.74"
serde = "1.0.133"
reqwest = "0.11.9"
bytes = "1.1.0"
dotenv = "0.15.0"
rand = { version = "0.8.4", features = ["std_rng"] }

[dependencies.serenity]
version = "0.10.9"
default-features = false
features = [
    "builder",
    "cache",
    "client",
    "gateway",
    "http",
    "model",
    "utils",
    "rustls_backend",
]
