[package]
name = "chairmanmao"
version = "0.1.0"
edition = "2021"

[lib]
name = "chairmanmao"
path = "src/lib.rs"

[[bin]]
name = "chairmanmao"
path = "src/bin/chairmanmao/chairmanmao.rs"

[[bin]]
name = "draw"
path = "src/bin/draw.rs"

[[bin]]
name = "exam"
path = "src/bin/exam.rs"

[[bin]]
name = "ulid"
path = "src/bin/ulid.rs"

[[bin]]
name = "server"
path = "src/bin/server/server.rs"

[dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "sync"] }
redis = { version = "0.21.5", features = ["streams", "tokio-comp"] }
serde_json = "1.0.74"
serde = "1.0.133"
reqwest = "0.11.9"
bytes = "1.1.0"
dotenv = "0.15.0"
rand = { version = "0.8.4", features = ["std_rng"] }
rusttype = "0.9.2"
image = "0.23.14"
futures = "0.3.0"
bson = "2.1.0"
ulid = { version = "0.5.0", features = ["serde"] }
hyper = { version = "0.14", features = ["full"] }
pretty_env_logger = "0.4"
juniper = "0.15.7"
juniper_hyper = "0.8.0"
async-trait = "0.1.52"


[dependencies.serenity]
version = "0.10.9"
default-features = false
features = [
    "builder",
    "cache",
    "client",
    "gateway",
    "http",
    "model",
    "utils",
    "rustls_backend",
]

[dependencies.mongodb]
version = "2.1.0"
default-features = false
features = ["tokio-runtime"]
